# smiles-db

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py  utils.py
app/api/: dependencies.py  router.py
app/api/routers/: discovery.py  publisher.py
app/database/: models.py  session.py
app/schemas/: discovery.py  publisher.py  smiles.py
app/services/: base.py  discoveries.py  discovery.py  publisher.py
migrations/: env.py
migrations/versions/: 1a8b218ba8b9_fix_authing.py  56f8ff3bf37e_rename_users_to_publishers_and_update_.py  667c6ce04390_add_revoked_tokens_table.py  cf87a7a72602_new_created_at_field_for_discovery.py  cff6a49f81ee_initial_migration.py  e194aa5ffae1_add_constraints_to_publisher_model.py
tests/: conftest.py  test_database.py  test_validate_smiles.py
